<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_java</name>
  <version>0.5.0</version>
  <description>Generate the ROS interfaces in Java.</description>
  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <license>Apache License 2.0</license>
  <author>Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>rcljava_common</buildtool_depend>
  
  <build_export_depend>rmw</build_export_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_export_jars</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rcljava_common</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_interface</buildtool_export_depend>

  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>rmw</test_depend>
  <test_depend>rmw_implementation</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  
  <test_depend>rosidl_cmake</test_depend>
  <test_depend>rosidl_generator_c</test_depend>
  <test_depend>rosidl_parser</test_depend>
  <test_depend>rosidl_typesupport_c</test_depend>
  
  <!-- TODO Remove -->
  <test_depend>rosidl_typesupport_connext_c</test_depend>
  <test_depend>rosidl_typesupport_opensplice_c</test_depend>
  <test_depend>rosidl_typesupport_introspection_c</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
